<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_fragment_bg_color"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingTop="@dimen/size_20dp"
        android:paddingRight="@dimen/size_10dp"
        android:paddingBottom="@dimen/size_20dp"
        android:text="@string/add_address"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_2dp"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingTop="@dimen/size_20dp"
        android:paddingRight="@dimen/size_10dp"
        android:paddingBottom="@dimen/size_20dp"
        android:text="@string/contact_us"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_2dp"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingTop="@dimen/size_20dp"
        android:textColor="@android:color/black"
        android:paddingRight="@dimen/size_10dp"
        android:paddingBottom="@dimen/size_20dp"
        android:text="@string/about_us"
        android:textSize="@dimen/text_size_16sp" />

</LinearLayout>